--- a/.github/workflows/kubernetes-pipe.yaml
+++ b/.github/workflows/kubernetes-pipe.yaml
@@ -4,19 +4,59 @@ on:
   push:
     branches: ["main"]
   pull_request:
+  workflow_dispatch:
+
+permissions:
+  pull-requests: read
 
 env:
   AZURE_CONTAINER_REGISTRY: "acrrepository"
   RESOURCE_GROUP: "tc-g8-resources"
   CLUSTER_NAME: "tech-challenge-k8s"
+  SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
 
 jobs:
   deploy:
-    permissions:
-      contents: read
-      id-token: write
     runs-on: ubuntu-latest
     steps:
+      - name: Set up github checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+
+      # Configure Caches for SonarCloud e Gradle
+      - name: Cache SonarCloud packages
+        uses: actions/cache@v4
+        with:
+          path: ~/.sonar/cache
+          key: ${{ runner.os }}-sonar
+          restore-keys: ${{ runner.os }}-sonar
+
+      - name: Cache Gradle packages
+        uses: actions/cache@v4
+        with:
+          path: ~/.gradle/caches
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
+          restore-keys: ${{ runner.os }}-gradle
+
+      # Configure Gradle for optimal use in GiHub Actions, including caching of downloaded dependencies.
+      # See: https://github.com/gradle/actions/blob/main/setup-gradle/README.md
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v3
+        with:
+            gradle-version: '8.3'
+
+        # Gradle build with SonarCloud integration
+      - name: Build with Gradle 8.3
+        run: gradle clean build sonar --info
+
       # Checks out the repository this file is in
       - uses: actions/checkout@v3
 
