--- a/.github/workflows/kubernetes-pipe.yaml
+++ b/.github/workflows/kubernetes-pipe.yaml
@@ -78,6 +78,7 @@ jobs:
 
       # Retrieves your Azure Kubernetes Service cluster's kubeconfig file
       - name: Get K8s context
+        if: github.ref == 'refs/heads/main'
         uses: azure/aks-set-context@v3
         with:
           resource-group: ${{ env.RESOURCE_GROUP }}
