--- a/k8s/application-tech-challenge-products.yaml
+++ b/k8s/application-tech-challenge-products.yaml
@@ -40,7 +40,7 @@ spec:
           periodSeconds: 10
         startupProbe:
           httpGet:
-            path: /actuator/health
+            path: /status
             port: 8080
           initialDelaySeconds: 240
           failureThreshold: 30
